packages/unified-server/landing/styles/landing.css
/* ... */
.md-label-small {
  font-size: 11px;
  line-height: 16px;
}

/** Weights **/

.w-700 {
  font-weight: 700;
}

.w-500 {
  font-weight: 500;
}

.w-400 {
  font-weight: 400;
}

/** Elements */

* {
  box-sizing: border-box;
}

html,
body {
  padding: 0;
  margin: 0;
  min-width: 360px;
  overflow: auto;
}

nav {
  position: relative;
  z-index: 2;
  background: var(--n-100);

  & header {
    height: 60px;
    border-bottom: 1px solid var(--n-90);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 var(--bb-grid-size-4);

    & div {
      display: flex;
      align-items: center;

      & h1 {
        margin: 0;
        padding: 0;
      }
    }

    & #sign-in-header {
      line-height: var(--bb-grid-size-10);
      border-radius: var(--bb-grid-size-16);
      background: var(--n-100);
      border: 1px solid var(--n-70);
      color: var(--n-0);
      padding: 0 var(--bb-grid-size-4);
      text-decoration: none;
    }

    #experiment {
      display: none;
      margin-left: var(--bb-grid-size-2);
      font-size: 11px;
      line-height: 1;
      padding: var(--bb-grid-size) var(--bb-grid-size-3);
      border-radius: var(--bb-grid-size-16);
      border: 1px solid var(--n-0);
      text-transform: uppercase;

      &.visible {
        display: block;
      }
    }
  }
}

main {
  & header {
    & #headline {
      display: flex;
      align-items: center;
      flex-direction: column;

      & h1 {
        padding: var(--bb-grid-size-8) 0;
        text-align: center;
        font-size: 36px;
        margin: 0 auto;
        width: 85svw;
        max-width: 1280px;
        position: relative;
        z-index: 1;
        animation: fadeIn 2s cubic-bezier(0.4, 0, 0.3, 1) 0.4s 1 backwards;
      }

      & #sign-in {
        line-height: var(--bb-grid-size-10);
        border-radius: var(--bb-grid-size-16);
        background: var(--n-0);
        color: var(--n-100);
        padding: 0 var(--bb-grid-size-4);
        text-decoration: none;
        margin-bottom: var(--bb-grid-size-6);
        animation: fadeIn 2s cubic-bezier(0.4, 0, 0.3, 1) 0.8s 1 backwards;
        z-index: 3;
      }
    }

    & #img {
      width: calc(100svw - var(--bb-grid-size-16));
      margin: 0 auto;
      aspect-ratio: 7/5;
      position: relative;

      &::after {
        content: "";
        width: 100%;
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
        border: 1px solid #d4daff;
        border-radius: 32px;
        animation: fadeIn 1.3s cubic-bezier(0.4, 0, 0.3, 1) 0.7s 1 backwards;
      }

      & #img-contents {
        width: 151%;
        height: 110%;
        position: absolute;
        right: 0;
        bottom: 18px;
        border-radius: 32px;

        & #landing-img {
          background-size: contain;
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
        }
      }
    }
  }

  & #build {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 60px auto;
    width: calc(100svw - var(--bb-grid-size-16));
    max-width: 1080px;

    & h1 {
      margin: 0 0 60px 0;
      font-size: 24px;
    }

    & #video-container {
      width: 100%;
      display: flex;
      align-items: center;
      justify-content: center;
      outline: 12px solid var(--n-98);
      border-radius: 16px;
      background: var(--n-0);
      color: var(--n-100);
      aspect-ratio: 16/9;
    }
  }
}

.error-dialog {
  border-radius: 16px;
  box-shadow: 0px 2px 6dvb 0px rgba(0, 0, 0, 0.2);
  border: none;
  padding: 24px;
  max-width: 475px;

  &::backdrop {
    backdrop-filter: blur(5px);
  }

  .content {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;

    .title {
      margin: 0;
    }
    .screenshot-container {
      display: flex;
      justify-content: center;
      box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
      padding: 12px;
      border-radius: 8px;
      margin: 12px 0 24px 0;
    }
    .sign-in {
      display: inline-flex;
      align-items: center;
      height: var(--bb-grid-size-10);
      border-radius: var(--bb-grid-size-16);
      background: var(--n-0);
      color: var(--n-100);
      padding: 0 var(--bb-grid-size-4);
      text-decoration: none;
    }
  }

  &#shared-flow-dialog,
  &#scopes-error-dialog {
    min-height: 200px;

    .screenshot-container {
      display: flex;
      justify-content: center;
      box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
      padding: 12px;
      border-radius: 8px;
      margin: 12px 0 24px 0;
    }

    .sign-in {
      display: inline-flex;
      align-items: center;
      height: var(--bb-grid-size-10);
      border-radius: var(--bb-grid-size-16);
      background: var(--n-0);
      color: var(--n-100);
      padding: 0 var(--bb-grid-size-10);
      text-decoration: none;
    }
  }

  &#shared-flow-dialog {
    max-width: 360px;

    & p {
      margin: var(--bb-grid-size-6) 0;
    }
  }
}

#discord {
  display: inline-flex;
  align-items: center;

  &::after {
    content: "";
    display: inline-block;
    margin-left: 32px;
    width: 20px;
    height: 20px;
    background: url(/styles/landing/images/third_party/discord-logo.svg) center
      center / contain no-repeat;
  }
}

footer {
  background: #f7f8ff;
  padding: 0 var(--bb-grid-size-6) var(--bb-grid-size-8) var(--bb-grid-size-6);

  & section {
    padding: var(--bb-grid-size-8) 0;
    border-bottom: 1px solid var(--n-0);

    h1 {
      margin: var(--bb-grid-size-2) 0 var(--bb-grid-size-7) 0;
    }

    & a {
      text-decoration: none;
      color: var(--n-0);
    }

    &:last-of-type {
      border-bottom: none;
    }

    menu {
      list-style: none;
      padding: 0;
      margin: 0;

      & li {
        margin-bottom: var(--bb-grid-size-6);
      }
    }
  }
}
/* ... */

